--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.7.4.post0
 anytree==2.8.0
-aria2p==0.9.1
+#aria2p==0.9.1
 async-timeout==3.0.1
 attrdict==2.0.1
 attrs==19.3.0
@@ -16,20 +16,20 @@ psycopg2-binary==2.8.5
 pyaes==1.6.1
 pyasn1==0.4.8
 pycparser==2.20
-qbittorrent-api
+#qbittorrent-api
 requests
 rsa==4.7
 six==1.15.0
 Telethon==1.20
 TgCrypto==1.2.2
-torrentool
+#torrentool
 urllib3
 yarl==1.5.1
 yt-dlp
-instaloader
+#instaloader
 natsort==7.1.0
 Pyrogram==1.1.13
 lxml
 beautifulsoup4>=4.8.2,<4.8.10
 speedtest-cli
-megasdkrestclient
+#megasdkrestclient
